--- a/templates/nav-top.css
+++ b/templates/nav-top.css
@@ -38,7 +38,6 @@ body {
 }
 
 #nav-top ul li {
-	left: -60px;
 	text-align: center;
 	font-family: RobotoMed;
 	display: inline-block;
